# audioctl

./: .gitignore  .ignore  AGENTS.md  CMakeLists.txt  README.md  opencode.json
.beads/: README.md  config.yaml  issues.jsonl
.gemini/skills/macos-platform-expert/: SKILL.md
.opencode/agents/: audio_architect.md
.opencode/commands/: bd.md  boot.md  build.md  checkpoint.md  fmt.md  sleep.md
driver/: CMakeLists.txt  Info.plist
driver/include/: virtual_audio_device.h
driver/src/: virtual_audio_device.cpp
en.lproj/: Localizable.strings
include/: aggregate_device_manager.h  aggregate_volume_proxy.h  app_volume_control.h  audio_apps.h  audio_common_types.h  audio_control.h  audio_router.h  constants.h  service_manager.h  virtual_audio_device.h  virtual_device_manager.h
include/device/: virtual_audio_driver.h
include/driver/: app_volume_driver.h  virtual_audio_device.h  virtual_audio_driver.h
include/ipc/: ipc_client.h  ipc_protocol.h  ipc_server.h
memory-bank/: activeContext.md  decisions.md  future_roadmap.md  implementation-plan.md  progress.md  test-protocol.md
resource/: Info.plist
scripts/: install.sh
src/: aggregate_device_manager.c  aggregate_volume_proxy.c  app_volume_control.c  audio_apps.m  audio_control.c  audio_router.c  constants.c  main.c  service_manager.c  virtual_audio_device.c  virtual_device_manager.c
src/device/: virtual_audio_device.c  virtual_audio_driver.c
src/driver/: app_volume_driver.c  virtual_audio_device.c  virtual_audio_driver.c  virtual_audio_driver.c.backup
src/ipc/: ipc_client.c  ipc_protocol.c  ipc_server.c
tests/: CMakeLists.txt  test_aggregate_device_manager.c  test_app_volume_control.c  test_audio_control.c  test_audio_processing.c  test_device_state.c  test_ipc_client.c  test_ipc_protocol.c  test_main.c  test_virtual_audio_device.c  test_virtual_device_control.c  test_virtual_device_manager.c
